@@ -40,7 +40,7 @@ Usage info.:
                        use "help" command for help information.
 
 Other info.:
-  This a part of the EPSRC funded project GAELS (EP/I038306/1).
+  This is a part of the EPSRC funded project GAELS (EP/I038306/1).
 
 Download info.:
   As this project is under continuous development, please download
