@@ -103,7 +103,11 @@ VIdentifier& netlist::Operation::get_var(){
 }
 
 void netlist::Operation::db_register(int iod) {
-  if(data.use_count() != 0) data->db_register(iod);
+  if(data.use_count() != 0) {
+    assert(data.unique());
+    data->db_register(iod);
+    assert(data.unique());
+  }
 }
 
 void netlist::Operation::db_expunge() {
